multitenancy-benchmarks/require-quota-for-all-objects/.kyverno-test/kyverno-test.yaml
# apiVersion: cli.kyverno.io/v1alpha1
# kind: Test
# metadata:
#   name: kyverno-test.yaml
# policies:
# - ../require-quota-for-all-objects.yaml
# resources:
# - resource.yaml
# results:
# - kind: Namespace
#   policy: require-quota-for-all-objects
#   resources:
#   - ns-resource-quota
#   result: pass
#   rule: resourcequotas
# variables: values.yaml
